# pyrest-model-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.config/: pylintrc  pylintrc_tests
.cursor/rules/: agent_behavior.mdc  env_setup.mdc  infrastructure_expert.mdc  infrastructure_tooling_expert.mdc  python_style.mdc  senior_software_architect.mdc  standard_libraries.mdc  testing_expert.mdc
.github/workflows/: tests.yml  testss.yml
example_usage/: example.py
example_usage/models/: environment.py  user.py
pyrest_model_client/: __init__.py  base.py  client.py  consts.py
tests/: test_async_client.py  test_base.py  test_client.py  test_models.py
usage_example/: usage_example.py
